<resources>
    <string name="app_name">Login Using Constraints</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="use_phone_number">Use Phone Number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
</resources>